fix: move marker link in popups below close, fixes overflow with no description

--- a/resources/styles/popups.less
+++ b/resources/styles/popups.less
@@ -1,8 +1,8 @@
 .datamap-popup {
     .datamap-popup-buttons {
         position: absolute;
-        top: 0;
-        right: 24px;
+        top: 24px;
+        right: 0;
         border: none;
         text-align: center;
         font: 16px/24px Tahoma,Verdana,sans-serif;
@@ -13,7 +13,7 @@
             width: 24px;
             height: 24px;
             background-size: 16px;
-            background-position: center 6px;
+            background-position: center center;
             background-repeat: no-repeat;
             text-decoration: none;
             opacity: 0.7;
